--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -162,7 +162,7 @@ Dataset can be created from various of types of Clojure structures and files:
     - `:separator` - column separator
     - `:single-value-column-name` - name of the column when single value is provided
     - `:column-names` - in case you want to name columns - only works for sequential input (arrays)
-    - `:layout` - for numberical, native array of arrays - treat entries `:as-rows` or `:as-columns` (default)
+    - `:layout` - for numerical, native array of arrays - treat entries `:as-rows` or `:as-columns` (default)
 
 `api/let-dataset` accepts bindings `symbol`-`column-data` to simulate R's `tibble` function. Each binding is converted into a column. You can refer previous columns to in further bindings (as in `let`).
 
