update, api fix

--- a/README.Rmd
+++ b/README.Rmd
@@ -124,6 +124,17 @@ Prepare following software:
 7. Render readme: `render("README.Rmd","md_document")`
 8. Render documentation: `render("docs/index.Rmd","all")`
 
+### API file generation
+
+`tablecloth.api` namespace is generated out of `api-template`, please run it before making documentation
+
+```{clojure eval=FALSE}
+(exporter/write-api! 'tablecloth.api.api-template
+                     'tablecloth.api
+                     "src/tablecloth/api.clj"
+                     '[group-by drop concat rand-nth first last shuffle])
+```
+
 ### Guideline
 
 1. Before commiting changes please perform tests. I ususally do: `lein do clean, check, test` and build documentation as described above (which also tests whole library).
