--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -2345,16 +2345,16 @@ Column can be also separated into several other columns using string as separato
 
 * dataset
 * source column
-* target columns - can be `nil` or `:infer` if `separator` returns map
+* target columns - can be `nil` or `:infer` to automatically create columns
 * separator as:
     - string - it's converted to regular expression and passed to `clojure.string/split` function
     - regex
     - or custom function (default: identity)
 * options
-    - `:drop-columns?` - whether drop source column(s) or not (default: `true` or `:all` in case of empty `target-columns`). When set to `:all` keeps only separation result.
+    - `:drop-columns?` - whether drop source column(s) or not (default: `true`). Set to `:all` to keep only separation result.
     - `:missing-subst` - values which should be treated as missing, can be set, sequence, value or function (default: `""`)
 
-Custom function (as separator) should return seqence of values for given value.
+Custom function (as separator) should return seqence of values for given value or a sequence of map.
 
 ---
 
@@ -2401,7 +2401,7 @@ Works on grouped dataset
 
 ---
 
-Separate using separator returning sequence of maps, in this case we drop all other columns.
+Separate using separator returning sequence of maps.
 
 ```{clojure results="asis"}
 (tc/separate-column DS :V3 (fn [^double v]
@@ -2415,6 +2415,21 @@ Keeping all columns
 (tc/separate-column DS :V3 nil (fn [^double v]
                                   {:int-part (int (quot v 1.0))
                                    :fract-part (mod v 1.0)}) {:drop-column? false})
+```
+
+Droping all colums but separated
+
+```{clojure results="asis"}
+(tc/separate-column DS :V3 nil (fn [^double v]
+                                 {:int-part (int (quot v 1.0))
+                                  :fract-part (mod v 1.0)}) {:drop-column? :all})
+```
+
+Infering column names
+
+```{clojure results="asis"}
+(tc/separate-column DS :V3 (fn [^double v]
+                             [(int (quot v 1.0)) (mod v 1.0)]))
 ```
 
 
