Update text in colum operations section

--- a/docs/column_api.qmd
+++ b/docs/column_api.qmd
@@ -513,7 +513,7 @@ null
 
 
 ### Column Operations
-The Column API contains the vast majority of column opeartions that have typically been available in the `tech.v3.datatype.functional` namespace.
+The Column API contains a large number of operations. These operations all take one or more columns as an argument, and they return either a scalar value or a new column, depending on the operations.  
 
 
 <div class="sourceClojure">
